<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/rl_room_layout"
            android:layout_width="@dimen/_140sdp"
            android:layout_height="@dimen/_140sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/robotolight"
                android:text="R - 100"
                android:textColor="@color/white"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/robotolight"
                android:text="@string/_3d_room_layout"
                android:textColor="@color/white"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_90sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/bg_square"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_light" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_90sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/bg_square"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_fan" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_90sdp"
            android:layout_marginTop="@dimen/_99sdp"
            android:background="@drawable/bg_square"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_ac" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_90sdp"
            android:layout_marginTop="@dimen/_99sdp"
            android:background="@drawable/bg_square"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/robotolight"
                android:text="@string/all_off"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_11ssp" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/rl_calendar_clock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_35sdp"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintTop_toBottomOf="@+id/rl_room_layout">

            <RelativeLayout
                android:id="@+id/rl_calendar"
                android:layout_width="0dp"
                android:layout_height="@dimen/_80sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_rectangle">

                <ImageView
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_marginBottom="@dimen/_12sdp"
                    android:src="@drawable/bg_square_in" />

                <ImageView
                    android:id="@+id/image_view_calendar"
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:layout_marginBottom="@dimen/_25sdp"
                    android:src="@drawable/ic_calendar" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/image_view_calendar"
                    android:fontFamily="@font/robotolight"
                    android:text="@string/calendar"
                    android:textAlignment="textStart"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_11ssp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_clock"
                android:layout_width="0dp"
                android:layout_height="@dimen/_80sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_7sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_rectangle">

                <ImageView
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_marginBottom="@dimen/_12sdp"
                    android:src="@drawable/bg_square_in" />

                <ImageView
                    android:id="@+id/image_view_clock"
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:layout_marginBottom="@dimen/_25sdp"
                    android:src="@drawable/ic_clock" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/image_view_clock"
                    android:fontFamily="@font/robotolight"
                    android:text="@string/clock"
                    android:textAlignment="textStart"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_11ssp" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/rl_news_weather"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintTop_toBottomOf="@+id/rl_calendar_clock">

            <RelativeLayout
                android:id="@+id/rl_news"
                android:layout_width="0dp"
                android:layout_height="@dimen/_80sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_rectangle">

                <ImageView
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_marginBottom="@dimen/_12sdp"
                    android:src="@drawable/bg_square_in" />

                <ImageView
                    android:id="@+id/image_view_news"
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:layout_marginBottom="@dimen/_25sdp"
                    android:src="@drawable/ic_news" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/image_view_news"
                    android:fontFamily="@font/robotolight"
                    android:text="@string/news"
                    android:textAlignment="textStart"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_11ssp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_weather"
                android:layout_width="0dp"
                android:layout_height="@dimen/_80sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_7sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_rectangle">

                <ImageView
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_marginBottom="@dimen/_12sdp"
                    android:src="@drawable/bg_square_in" />

                <ImageView
                    android:id="@+id/image_view_weather"
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:layout_marginBottom="@dimen/_25sdp"
                    android:src="@drawable/ic_weather" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/image_view_weather"
                    android:fontFamily="@font/robotolight"
                    android:text="@string/weather"
                    android:textAlignment="textStart"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_11ssp" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/rl_vr_room"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintTop_toBottomOf="@+id/rl_news_weather">

            <RelativeLayout
                android:id="@+id/rl_vr"
                android:layout_width="0dp"
                android:layout_height="@dimen/_80sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_rectangle">

                <ImageView
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_marginBottom="@dimen/_12sdp"
                    android:src="@drawable/bg_square_in" />

                <ImageView
                    android:id="@+id/image_view_vr"
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:layout_marginBottom="@dimen/_25sdp"
                    android:src="@drawable/ic_vr" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/image_view_vr"
                    android:fontFamily="@font/robotolight"
                    android:text="@string/vr_assistant"
                    android:textAlignment="textStart"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_11ssp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_room"
                android:layout_width="0dp"
                android:layout_height="@dimen/_80sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_7sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_rectangle">

                <ImageView
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_marginBottom="@dimen/_12sdp"
                    android:src="@drawable/bg_square_in" />

                <ImageView
                    android:id="@+id/image_view_room"
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:layout_marginBottom="@dimen/_25sdp"
                    android:src="@drawable/ic_room" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/image_view_room"
                    android:fontFamily="@font/robotolight"
                    android:text="@string/room_service"
                    android:textAlignment="textStart"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_11ssp" />

            </RelativeLayout>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rl_logout"
            android:layout_width="@dimen/_180sdp"
            android:layout_height="@dimen/_90sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/bg_square"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rl_vr_room">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/robotolight"
                android:text="@string/logout"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_11ssp" />

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>